src/test/ui/structs/struct-variant-privacy-xc.stderr
error[E0603]: enum `Bar` is private
  --> $DIR/struct-variant-privacy-xc.rs:4:33
   |
LL | fn f(b: struct_variant_privacy::Bar) {
   |                                 ^^^ private enum
   |
note: the enum `Bar` is defined here
  --> $DIR/auxiliary/struct_variant_privacy.rs:1:1
   |
LL | enum Bar {
   | ^^^^^^^^

error[E0603]: enum `Bar` is private
  --> $DIR/struct-variant-privacy-xc.rs:7:33
   |
LL |         struct_variant_privacy::Bar::Baz { a: _a } => {}
   |                                 ^^^ private enum
   |
note: the enum `Bar` is defined here
  --> $DIR/auxiliary/struct_variant_privacy.rs:1:1
   |
LL | enum Bar {
   | ^^^^^^^^

error[E0603]: cannot match on a field named `a` of variant `struct_variant_privacy::Bar::Baz`, which is not accessible in current scope
  --> $DIR/struct-variant-privacy-xc.rs:7:44
   |
LL |         struct_variant_privacy::Bar::Baz { a: _a } => {}
   |                                            ^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0603`.
